# spark_med_analytics

./: .env.example  .gitignore  Makefile  README.md  compose.yml  dockerfile.dbt  generate_data.py  main.py  pyproject.toml  requirements-cloud.txt  requirements.txt  todo
config/: dev_config.yaml  schemas.yaml
dags/: my_first_dag.py
dbt_project/: .user.yml  profiles.yml
dbt_project/models/: schema.yml
dbt_project/models/analytics/: visits.sql
dbt_project/models/staging/: stg_iceberg__visits.sql
jobs/: bronze_to_silver.py  load_references.py  optimize_tables_ice.py  schema_sync_ice.py  silver_to_gold.py
raw/: departments.csv  professions.csv
scripts/: generate_data.py
spark/: bronze_to_silver.py  bronze_to_silver_reference_books.py  process.py
src/: config.py  constants.py  decorators.py  exceptions.py  logging_config.py  schemas.py  transforms.py  utils.py
src/core/: data_catalog_registry.py  schema_manager.py  session.py  writer.py
src/utils/: _db.py  db.py  errors.py  finalize_validation.py  metrics.py  s3.py  validate.py
